fix overflowing contact items

--- a/src/container/Contacts/Contacts.module.scss
+++ b/src/container/Contacts/Contacts.module.scss
@@ -63,33 +63,37 @@
       cursor: pointer;
       background-color: #fef4f5;
       transition: all 0.3s ease-in-out;
+      font-size: 2.8rem;
+      text-align: left;
+      color: var(--gray-color);
+      line-height: 1.5;
 
-      img {
+      font-weight: 600;
+      text-decoration: none;
+
+      .img {
         width: 4rem;
         height: 4rem;
         margin: 0 1.1rem;
+
+        @include mixins.mobile {
+          margin: 0;
+        }
       }
 
-      a {
-        font-size: 2.8rem;
-        text-align: left;
-        color: var(--gray-color);
-        line-height: 1.5;
-
-        font-weight: 600;
-        text-decoration: none;
-
-        @include mixins.xl-desktop {
-          font-size: 1.3rem;
-        }
+      @include mixins.xl-desktop {
+        font-size: 1.3rem;
       }
 
       &:hover {
         box-shadow: 0 0 2.5rem #fef4f5;
+        color: var(--secondary-color);
       }
 
       @include mixins.mobile {
+        min-width: auto;
         width: 100%;
+        flex-direction: column;
       }
 
       &:last-child {
@@ -109,7 +113,6 @@
     text-align: center;
 
     width: 60%;
-    // min-width: 29rem;
     flex-direction: column;
     margin: 1.6rem 3.2rem;
 
@@ -178,7 +181,6 @@
       }
 
       @include mixins.laptop {
-        // width: 100%;
         margin: 1.6rem 0;
       }
 
